src/popup.css
/* Styles go here */

body {
    font-family: Arial, sans-serif;
    margin: 0;
    padding: 0;
  }
  
  .container {
    display: flex;
    height: 450px;
    width: 450px;
  }
  
  .menu {
    width: 60px;
    background-color: #f1f1f1;
    display: flex;
    flex-direction: column;
    align-items: center;
    height: 100vh;
  }
  
  .tab-btn {
    background: none;
    border: none;
    padding: 10px;
    cursor: pointer;
    width: 100%;
  }
  
  .tab-btn img {
    width: 24px;
    height: 24px;
  }
  
  .tab-btn.active {
    background-color: #ccc;
  }
  
  .content {
    flex-grow: 1;
    padding: 20px;
  }
  
  .tab-content {
    display: none;
  }
  
  .tab-content.active {
    display: block;
  }

#text {
    width: 90%;
    padding: 8px;
    font-size: 20px;
    margin-bottom: 8px;
    height: 50%;
}

#output {
    font-size: 20px;
    font-family: 'Roboto Mono', monospace;
    height: 100px;
    width: 100%;
    white-space: pre-wrap;
    max-height: 100%;
    overflow: auto;
}
.clippy-btn {
    background-color: #04AA6D; /* Green */
    border: none;
    color: white;
    padding: 15px 32px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 16px;
  }

  .clippy-btn:disabled, .clippy-btn-small:disabled {
    background-color: #cccccc; /* Gray */
    color: #666666; /* Dark gray */
    cursor: not-allowed;
    opacity: 0.6; /* Make the button slightly transparent */
  }

  .clippy-btn-small {
    background-color: #04AA6D; /* Green */
    border: none;
    color: white;
    padding: 10px 16px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 12px;
  }

  .clippy-btn-delete {
    background-color: #ef0000; /* Green */
    border: none;
    color: white;
    padding: 10px 16px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 12px;
  }

  table {
    width: 100%;
    border-collapse: collapse;
  }
  
  th, td {
    border: 1px solid #ddd;
    padding: 8px;
  }
  
  th {
    background-color: #f2f2f2;
    text-align: left;
  }

